update login logic | auth app -> users app(POST /users) | delete auth app
