# api-server/express-ts/src/apis/users/users.controller.ts
@@ -7,6 +7,9 @@ import { Request, Response } from 'express';
 import { PoolClient } from 'pg';
 import { pool } from '../../db';
 import { User } from '../../entities/user.entity';
+import jwt from 'jsonwebtoken';
+import { Role } from '../../entities/role.entity';
+import conf from '../../config';
 
 // GET /users
 // eslint-disable-next-line @typescript-eslint/explicit-module-boundary-types
@@ -51,6 +54,68 @@ export const getUserDetail = async (req: Request, res: Response) => {
     return res.status(400).json({ success: false, errorMessage });
   } finally {
     client.release();
+  }
+};
+
+// POST /users
+export const postUser = async (req: Request, res: Response) => {
+  // email?(google login일 때만), locale
+  const { userinfo } = req.body;
+  const poolClient: PoolClient = await pool.connect();
+
+  try {
+    if (userinfo.locale === undefined) {
+      return res.status(400).json({
+        success: false,
+        errorMessage: 'Require locale property in Request Body { userinfo }'
+      });
+    }
+
+    let userId: number;
+    let isMember = false;
+
+    console.log('That is test');
+    if (
+      // users 테이블에 유저 정보가 이미 있는 경우(이미 회원가입 된 유저)
+      userinfo.email &&
+      (await User.isExistByEmail(poolClient, userinfo.email as string))
+    ) {
+      userId = (
+        await User.findOneByEmail(poolClient, userinfo.email as string, [
+          'userId'
+        ])
+      ).userId;
+      isMember = true;
+      await new User(userId).updateLatestLogin(poolClient);
+    } else {
+      // users 테이블에 유저 정보가 없거나 guest인 경우(회원가입)
+      // Create a new ussr
+      const user: User = new User(
+        undefined, // userId
+        userinfo.email ? userinfo.email : 'NULL', // email
+        userinfo.email
+          ? 'member' + String(Date.now()).slice(-8)
+          : 'guest' + String(Date.now()).slice(-8), // nickname
+        userinfo.locale, // locale
+        Role.getRoleId('guest') // roleId
+      );
+      userId = Number((await user.create(poolClient)).userId);
+    }
+
+    console.info(`Login \t user_id: ${userId}`);
+    // jwt token 생성
+    const token = jwt.sign(
+      { userId },
+      conf.jwtToken.secretKey as string,
+      userinfo.email ? conf.jwtToken.option : conf.jwtToken.optionGuest // guest면 만료 기간이 없는 토큰 생성
+    );
+    res.status(201).json({ success: true, token, isMember });
+  } catch (error) {
+    console.error(error);
+    const errorMessage = (error as Error).message;
+    return res.status(500).json({ sucess: false, errorMessage });
+  } finally {
+    poolClient.release();
   }
 };
 
